--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://albert1903-ux.github.io/reyes-magos",
   "scripts": {
-    "dev": "vite",
+    "dev": "netlify dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
+    "netlify-cli": "^23.11.1",
     "vite": "^7.2.4"
   }
 }
