--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,11 @@
     ],
     "rewrites": [
         {
-            "source": "/((?!api/.*).*)",
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
+        },
+        {
+            "source": "/((?!api/|.*\\..*|_next/|static/|@).*)",
             "destination": "/index.html"
         }
     ],
